# boost_python_catkin_example

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: use_cpplib.py
src/: mycpplib.cpp  use_pylib.cpp
src/boost_python_catkin_example/: mypylib.py
